SberProject/search/k8s/search-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-deployment
  namespace: search
  labels:
    app: search
spec:
  replicas: 4
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
        - name: search
          image: cr.yandex/crpl2ivjm7kaokv219ge/search_service:latest
          ports:
            - containerPort: 8080
