SberProject/search/k8s/search-service.yml
apiVersion: v1
kind: Service
metadata:
  name: search-service
  namespace: search
spec:
  selector:
    app: search
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
