SberProject/search/k8s/search-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-ingress
  namespace: search
spec:
  ingressClassName: nginx-search
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: search-service
                port:
                  number: 80
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: search-service
                port:
                  number: 80
